--- a/package.json
+++ b/package.json
@@ -19,9 +19,5 @@
     "url": "https://github.com/forresto/plugin-coffee/issues"
   },
   "homepage": "https://github.com/forresto/plugin-coffee",
-  "jspm": {
-    "dependencies": {
-      "coffee-script": "npm:coffee-script@^1.8.0"
-    }
-  }
+  "jspm": {}
 }
