--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "system-coffee",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "SystemJS plugin for CoffeeScript",
   "main": "coffee.js",
   "repository": {
@@ -19,5 +19,10 @@
     "url": "https://github.com/forresto/system-coffee/issues"
   },
   "homepage": "https://github.com/forresto/system-coffee",
-  "jspm": {}
+  "jspm": {
+    "devDependencies": {
+      "traceur": "github:jmcriffey/bower-traceur@0.0.87",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.87"
+    }
+  }
 }
